tests/typecheck/should_fail/T7609.stderr

T7609.hs:7:16: error: [GHC-83865]
    • Expecting one more argument to ‘Maybe’
      Expected a type, but ‘Maybe’ has kind ‘* -> *’
    • In the type signature: f :: (a `X` a, Maybe)

T7609.hs:10:7: error: [GHC-83865]
    • Expected a constraint, but ‘a `X` a’ is a type
    • In the type signature: g :: (a `X` a) => Maybe

T7609.hs:10:19: error: [GHC-83865]
    • Expecting one more argument to ‘Maybe’
      Expected a type, but ‘Maybe’ has kind ‘* -> *’
    • In the type signature: g :: (a `X` a) => Maybe
